--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,8 @@ dependencies {
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'cn.pedant.sweetalert:library:1.3'
     compile 'com.miguelcatalan:materialsearchview:1.4.0'
+    compile 'com.squareup.picasso:picasso:2.5.2'
+    compile 'com.davemorrissey.labs:subsampling-scale-image-view:3.5.0'
     compile files('C:/back up code/16-9/SlidingImages_Demo/libs/PayPal_MPL.jar')
     compile files('C:/back up code/16-9/SlidingImages_Demo/libs/PayPalAndroidSDK-2.8.5.jar')
     compile project(':bouncy_text_library')
