--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -92,6 +92,7 @@
         <activity android:name=".DesignerDetailActivity"/>
         <activity android:name=".OrderList"/>
         <activity android:name=".MainActivity"/>
+        <activity android:name=".DetailsActivity"/>
     </application>
 
 </manifest>
