--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,7 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:23.3.+'
     compile 'com.android.support:cardview-v7:23.3.+'
     compile 'com.github.bumptech.glide:glide:3.7.0'
+    compile 'com.koushikdutta.ion:ion:2.+'
     compile 'cn.pedant.sweetalert:library:1.3'
     compile 'com.miguelcatalan:materialsearchview:1.4.0'
     compile 'com.squareup.picasso:picasso:2.5.2'
